tests/build/cases/widget_new/no_default_when_assigned3.stderr
error: property `my_property` is not assigned and has no default value
  --> $DIR/no_default_when_assigned3.rs:12:19
   |
12 |         when *#my_property == 1 { }
   |                   ^^^^^^^^^^^
